# vqlp

./: .gitignore  404.html  LICENSE  README.md  gitremakeipynb.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
api/: index.html
docs/: api.md  example.ipynb  index.md
example/: index.html
examples/: example_vqlp.py
search/: search_index.json
site/: 404.html  objects.inv
site/api/: index.html
site/search/: search_index.json
src/vqlp/: __init__.py  cadj_utils.py  utils.py  vq.py
src/vqlp/archive/: __init__.archive.py  cadj_utils_b4review062926.py  utils.py  vq.py  vq_b4review062926.py
